# serializer version: 1
# name: TestPropertyValuesQueryRunner.test_person_property_values_basic
  '''
  SELECT value AS value,
         count() AS c
  FROM
    (SELECT argMax(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'country'), ''), 'null'), '^"|"$', '')), person.version) AS value
     FROM person
     WHERE and(equals(person.team_id, 99999), in(person.id,
                                                   (SELECT id AS id
                                                    FROM
                                                      (SELECT person.id AS id, toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'country'), ''), 'null'), '^"|"$', '')) AS value
                                                       FROM person
                                                       WHERE and(equals(person.team_id, 99999), isNotNull(value), ifNull(notEquals(value, ''), 1))
                                                       ORDER BY person.id DESC
                                                       LIMIT 100000))))
     GROUP BY person.id
     HAVING equals(argMax(person.is_deleted, person.version), 0))
  WHERE and(isNotNull(value), ifNull(notEquals(value, ''), 1))
  GROUP BY value
  ORDER BY c DESC
  LIMIT 20 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    optimize_rewrite_aggregate_function_with_if=0,
                    optimize_min_inequality_conjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPropertyValuesQueryRunner.test_person_property_values_distinct_id_suggestions
  '''
  SELECT person_distinct_id2.distinct_id AS value,
         1 AS c
  FROM person_distinct_id2
  WHERE equals(person_distinct_id2.team_id, 99999)
  GROUP BY person_distinct_id2.distinct_id
  HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0)
  ORDER BY value ASC
  LIMIT 20 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    optimize_rewrite_aggregate_function_with_if=0,
                    optimize_min_inequality_conjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
